# analysis-pitchfork_reviews

./: .gitignore  README.md  pyproject.toml
test_pitchfork_reviews/: pitchfork_reviews.ipynb  tests.py
test_pitchfork_reviews/to_sql/: __main__.py  commands.py  config.py  table_schemas.py
